[package]
name = "etf-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = {version = "3.2.2", features = ["derive"]}
reqwest = "0.11.14"
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
hex = "0.4.3"
sp-core = "12.0.0"
sp-runtime = "14.0.0"
clap = { version = "4.1.1", features = ["derive"] }
tiny-bip39 = "1.0.0"
